--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Formul_rioParaDEVsRH
-main.class=formul\u00e1rioparadevsrh.Formul\u00e1rioParaDEVsRH
+main.class=br.com.formulario.view.TelaForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
